--- a/index.html
+++ b/index.html
@@ -16,96 +16,42 @@
       <nav id="nav-bar">
           <p class="box"><a href=#About_me>About me</a></p>
           <p class="box"><a href=#CV>CV</a></p>
-          <p class="box"><a href=#Social_sites>Social sites</a></p>
-          <p class="box"><a href=#Contacts>Contacts</a></p>
+          <p class="box"><a href=#Socials>Socials</a></p>
       </nav>
     </header>
   
     <main>
+      <article id="About_me">
+        <h2>About me</h2>
+        <p>
+          I am a software developer with a passion for web development. I have experience in front-end development using Taiwind CSS, Flask, Django, Python, Javascript, and I enjoy working on projects that challenge me and allow me to learn new things.
         </p>
-          <article id="About_me">
-          <h2>About me</h2>
-          <p class="text">
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works. My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works. My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works. My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works. My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works. My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works. My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-          </p>
-        </article>
+  
+        <p>
+          My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
+              I have created this website as my freetime project, because I wanted to broaden my knowledge 
+        </p>
+      </article>
         <article id="CV">
           <h2>CV</h2>
           <p class="text">
-            You can download my Curriculum Vitae Word document <a href="documents/CV - David Brablc ENG.pdf" rel="CV" title="Curriculum Vitae - David Brablc.docx" download="Curriculum Vitae - David Brablc"> here</a>.
+              You can download my CV document <a href="documents/CV - David Brablc ENG.pdf" rel="CV" title="Curriculum Vitae - David Brablc.pdf" download="Curriculum Vitae - David Brablc"> here</a>.
           </p>
         </article>
-        <article id="Social_sites">
-          <h2>Social sites</h2>
-        </article>
-        <article id="Contacts">
-          <h2>Contacts</h2>
+        <article id="Socials">
+          <h2>Socials</h2>
           <p>
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-            I have created this website as my freetime project, because I wanted to broaden my knowledge 
-            knowledge in how frontend development works.
-          
+              You can find me on social media:
           </p>
+          <div id="list">
+              <ul id="socials">
+                  <li><a href="https://www.linkedin.com/in/david-brablc-764749225/" target="_blank">LinkedIn  </a></li>
+                  <li><a href="https://www.facebook.com/david.brablc.7">Facebook</a></li>
+                  <li><a href="https://www.instagram.com/davidbrablc/">Instagram</a></li>
+              </ul>
+          </div>
         </article>
-
     </main>
-
     <footer>
       <p>Copyright ©2023 by David Brablc. All rights reserved.</p>
     </footer>
