minor style changes

--- a/index.html
+++ b/index.html
@@ -21,36 +21,38 @@
     </header>
   
     <main>
-      <article id="About_me">
-        <h2>About me</h2>
-        <p>
-          I am a software developer with a passion for web development. I have experience in front-end development using Taiwind CSS, Flask, Django, Python, Javascript, and I enjoy working on projects that challenge me and allow me to learn new things.
-        </p>
-  
-        <p>
-          My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
-              I have created this website as my freetime project, because I wanted to broaden my knowledge 
-        </p>
-      </article>
-        <article id="CV">
-          <h2>CV</h2>
-          <p class="text">
-              You can download my CV document <a href="documents/CV - David Brablc ENG.pdf" rel="CV" title="Curriculum Vitae - David Brablc.pdf" download="Curriculum Vitae - David Brablc"> here</a>.
-          </p>
-        </article>
-        <article id="Socials">
-          <h2>Socials</h2>
+      <div id="content">
+        <article id="About_me">
+          <h2>About me</h2>
           <p>
-              You can find me on social media:
+            I am a software developer with a passion for web development. I have experience in front-end development using Taiwind CSS, Flask, Django, Python, Javascript, and I enjoy working on projects that challenge me and allow me to learn new things.
           </p>
-          <div id="list">
-              <ul id="socials">
-                  <li><a href="https://www.linkedin.com/in/david-brablc-764749225/" target="_blank">LinkedIn  </a></li>
-                  <li><a href="https://www.facebook.com/david.brablc.7">Facebook</a></li>
-                  <li><a href="https://www.instagram.com/davidbrablc/">Instagram</a></li>
-              </ul>
-          </div>
+    
+          <p>
+            My name is David Brablc, I am a student at the University of Economics in Prague, Czech Republic. 
+                I have created this website as my freetime project, because I wanted to broaden my knowledge 
+          </p>
         </article>
+          <article id="CV">
+            <h2>CV</h2>
+            <p class="text">
+                You can download my CV document <a href="documents/CV - David Brablc ENG.pdf" rel="CV" title="Curriculum Vitae - David Brablc.pdf" download="Curriculum Vitae - David Brablc"> here</a>.
+            </p>
+          </article>
+          <article id="Socials">
+            <h2>Socials</h2>
+            <p>
+                You can find me on social media:
+            </p>
+            <div id="list">
+                <ul id="socials">
+                    <li><a href="https://www.linkedin.com/in/david-brablc-764749225/" target="_blank">LinkedIn  </a></li>
+                    <li><a href="https://www.facebook.com/david.brablc.7">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/davidbrablc/">Instagram</a></li>
+                </ul>
+            </div>
+          </article>
+      </div>
     </main>
     <footer>
       <p>Copyright ©2023 by David Brablc. All rights reserved.</p>
